"Cannot find index to verify that join fields will be unique" should be user error

XMLWordPrintableJSON

    • Atlas Streams
    • Fully Compatible
    • Sprint 59
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Change the below to use ErrorCodes::StreamProcessorInvalidOptions, which is a user error:

          if (fieldPaths)

      {         uassert(8186209,                 "Cannot find index to verify that join fields will be unique",                 fieldsHaveSupportingUniqueIndex(expCtx, outputNs, *fieldPaths));         return
      {*fieldPaths, boost::none}

      ;
          }

            Assignee:
            Andrea Rahmanan
            Reporter:
            Matthew Normyle
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: