SERVER-95271 categorize missing required index for $merge as user error (#27987)